# mlops-cloud-project-mlops_11

./: .dockerignore  .env.docker  .env.template  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_GUIDE.md  Dockerfile.dev  Makefile  README.md  docker-compose.git-workflow.yml  docker-compose.simple.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-enhanced-full.txt  requirements-enhanced.txt  requirements-minimal.txt  requirements-resolved.txt  requirements.txt  run_docker_tests.sh  run_tests.sh  section5_simulation_test_report.json  test_section2.py
.github/workflows/: WORKFLOW_STRATEGY.md  ci-cd-pipeline.yml  section5-docker-test copy.yml  section5-docker-test.yml  section5-docker-test2.yml
.obsidian/: workspace.json
airflow/: docker-compose-airflow.yml
airflow/dags/: imdb_preprocess_dag.py  tmdb_data_collection_dag.py  tmdb_weekly_collection_dag.py
config/: development.yaml  feature_store_config.yaml  logging.yaml  production.yaml  prometheus.yml
config/features/: pipeline_config.yaml
config/postgres/: init-feature-store.sql
configs/:  project_config.py  model_config.yaml
docker/: .env.example  Dockerfile.api  Dockerfile.mlflow  Dockerfile.train  basic.env  debug.sh  docker-compose.git-workflow.yml  docker-compose.main.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  makemodel.py  monitoring.env  production.env
docker/monitoring/: alertmanager.bk.yml  alertmanager.yml  alertmanager.yml.backup  mlflow_start.py  prometheus.yml
docs/: mlops_quickstart_guide.md
docs/00-overview/: 0.mlops-architecture-complete-9stages.html  0.mlops-architecture-complete-9stages.md  1.mlops-house-building-analogy.html  1.mlops-house-building-analogy.md  10.development-workflow.html  10.development-workflow.md  2.server-architecture.html  2.server-architecture.md  3.mlops-project-implementation-analysis.html  3.mlops-project-implementation-analysis.md  4.detailed-analysis-implementation-plan.html  4.detailed-analysis-implementation-plan.md  5.python-requirements-analysis.html  5.python-requirements-analysis.md  6.enterprise-mlops-project-structure.html  6.enterprise-mlops-project-structure.md  7.mlops-9-stages-implementation-roadmap.html  7.mlops-9-stages-implementation-roadmap.md  8.directory-structure.html  8.directory-structure.md  9.naming-conventions.html  9.naming-conventions.md
docs/01-data-processing/: 1.data-processing-implementation-guide.md  requirements-dev.txt  requirements.txt
docs/02-feature-store/: 1.feature-store-implementation-guide.md  README.md  requirements-dev.txt  requirements.txt
docs/03-version-control/: 1.version-control-implementation-guide.md  PROGRESS.md  requirements-dev.txt  requirements.txt
docs/04-cicd-pipeline/: 1.cicd-pipeline-implementation-guide.md  README.md  requirements-dev.txt  requirements.txt
docs/05-model-serving/: README.md
docs/05-workflow-orchestration/: 1.workflow-orchestration-implementation-guide.md  requirements-dev.txt  requirements.txt
docs/06-model-registry/: 1.model-registry-implementation-guide.md  requirements-dev.txt  requirements.txt
docs/06-monitoring/: README.md
docs/07-model-serving/: 1.model-serving-implementation-guide.md  requirements-dev.txt  requirements.txt
docs/08-monitoring/: 1.monitoring-implementation-guide.md  requirements-dev.txt  requirements.txt
docs/08-scalability/: README.md
notebooks/: 01_data_exploration.ipynb
scripts/: airflow_management.py  alternative_section5_tests.sh  backup_automation.py  branch-manager.sh  create_ci_test_model.py  create_mlops_branch.py  daily_collection.py  docker-setup-jq.sh  fix-env-vars.sh  generate_daily_quality_report.py  git_workflow.py  install-git-hooks.sh  log_management.py  monthly_collection.py  quality_automation.py  quick_api_test.py  scheduler_control.sh  setup_section6_2.py  start_monitoring_stack.py  test_logging_system.py  test_preprocessing.py  train_model.py  validate_branch_name.sh  validate_data.py  weekly_collection.py
src/: __init__.py
src/api/: endpoints.py  (+4 more)
tests/: alertmanager_diagnostic_script.sh  simple_api_test.sh  simple_mlflow_model_test.py  wsl_environment_info_extractor.py  wsl_ml_environment.json
(+157 files in other folders)
